# OriginalMonad

./: README.md  original-monad.cabal
app/: Main.hs  MyContainer.hs  MyEither.hs  MyMaybe.hs  MyProcessor.hs  MyState.hs
