cabal-version:      3.0
name:               original-monad
version:            0.1.0.0
author:             NakagamiYuta
maintainer:         guguru0014@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

executable original-monad
    import:           warnings
    main-is:          Main.hs
    other-modules:
        MyMaybe,
        MyEither,
        MyContainer,
        MyState,
    build-depends:
        base ^>=4.17.2.1,
    hs-source-dirs:   app
    default-language: GHC2021
